[project]
name = "iberian-blackout"
version = "0.0.1"
description = "An analysis project for the iberian blackout"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "basemap==1.4.1",
    "boto3==1.38.23",
    "matplotlib==3.8.4",
    "notebook==7.4.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "requests==2.32.3",
    "swifter==1.4.0",
]
